--- a/internship/templates/internship/login.html
+++ b/internship/templates/internship/login.html
@@ -1,10 +1,22 @@
 {% extends "base.html" %}
 
 {% block content %}
+<style>
+    label {
+        width: 100px;
+    }
+    input {
+        width: 50%;
+    }
+    form {
+        margin: 50px;
+    }
+</style>
 <div class="container-fluid">
 
-    <div class="row">
-        <div class = "col-sm-12 col-md-7">
+    <h2 style="">Login</h2>
+    <div class="row" style="height:100%">
+        <div class = "col-sm-12 col-md-5" style="margin:auto auto;">
             <div class="panel panel-default">
                 <div class="panel-body">
 
