--- a/internship/templates/internship/register.html
+++ b/internship/templates/internship/register.html
@@ -9,9 +9,10 @@
                 <div class="panel-body">
 
                     <h3>Login as: </h3>
-                    <a href="{% url 'register_company' %}">Company</a>
-                    <br>
-                    <a href="{% url 'register_student' %}">Student</a>
+                    <br />
+                    <a href="{% url 'register_company' %}" class="button btn btn-success">Company</a>
+                    <br /><br />
+                    <a href="{% url 'register_student' %}" class="button btn btn-success">Student</a>
 
                 </div>
             </div>
