--- a/internship/templates/internship/register_student.html
+++ b/internship/templates/internship/register_student.html
@@ -3,6 +3,9 @@
 {% block content %}
 <div class="container-fluid">
 
+    <h2>Student Sign-up</h2>
+    <br />
+
     <div class="row">
         <div class = "col-sm-12 col-md-7">
             <div class="panel panel-default">
