--- a/internship/templates/internship/applications.html
+++ b/internship/templates/internship/applications.html
@@ -1,11 +1,13 @@
 {% extends 'base.html' %}
 {% block content%}
 {% if request.user.is_authenticated and request.user.profile.is_student %}
-<ul>
+<div style="margin:10px;">
     {% for a in applications %} 
-    <li><a href="{% url 'intern_detail' a.internship.id %}">{{a.internship.profile}} - {{a.internship.company}}</a></li>
+    <div class="well">
+        <h4><a href="{% url 'intern_detail' a.internship.id %}">{{a.internship.profile}} - {{a.internship.company.name}}</a></h4>
+    </div>
     {% endfor %}
-</ul>
+</div>
 {% else %}
 <h1>Login as student</h1>
 {% endif %}
