--- a/internship/templates/internship/intern_applications.html
+++ b/internship/templates/internship/intern_applications.html
@@ -1,11 +1,12 @@
 {% extends 'base.html' %}
 {% block content%}
 {% if request.user.is_authenticated and request.user.profile.is_company %}
-<ul>
+<div style="margin:10px;">
     {% for a in applications %} 
-    <li><a href="{% url 'user_detail' a.student.id%}">{{a.student.name}} </a></li>
+    <h4 class="well"><a href="{% url 'user_detail' a.student.id%}">{{a.student.name}} </a></li></h4>
+    <br /><br />
     {% endfor %}
-</ul>
+</div>
 {% else %}
 <h1>Login as company</h1>
 {% endif %}
