--- a/internship/templates/internship/register_company.html
+++ b/internship/templates/internship/register_company.html
@@ -1,10 +1,23 @@
 {% extends "base.html" %}
 
 {% block content %}
+<style>
+    label {
+        width: 150px;
+    }
+    input {
+        width: 60%;
+    }
+    form {
+        margin: 50px;
+    }
+</style>
 <div class="container-fluid">
 
+<h2>Company Sign-up</h2>
+<br />
     <div class="row">
-        <div class = "col-sm-12 col-md-7">
+        <div class = "col-sm-12 col-md-5">
             <div class="panel panel-default">
                 <div class="panel-body">
 
