--- a/internship/templates/user/add_education.html
+++ b/internship/templates/user/add_education.html
@@ -1,10 +1,22 @@
 {% extends 'base.html' %}
 
 {% block content %}
-<div class="container-fluid">
 
-    <div class="row">
-        <div class = "col-sm-12 col-md-7">
+<style>
+    label {
+        width: 100px;
+    }
+    input {
+        width: 50%;
+    }
+    form {
+        margin: 50px;
+    }
+</style>
+<div class="container-fluid">
+<h2 style="text-align: center">Add Education</h2>
+    <div class="row" style="margin:10px">
+        <div class = "col-sm-12 col-md-12">
             <div class="panel panel-default">
                 <div class="panel-body">
 
@@ -12,13 +24,13 @@
                                 {% csrf_token %}
                                     <label for="college">College</label>
                                     <input type="text" name="college" id="college" />
-                                    <br />
+                                    <br /><br />
                                     <label for="degree">Degree</label>
                                     <input type="text" name="degree" id="degree" />
-                                    <br />
+                                    <br /><br />
                                     <label for="gpa">GPA</label>
                                     <input type="number" name="gpa" id="gpa" />
-                                    <br />
+                                    <br /><br />
                                 
                                     <div class="form-group">
                                             <div class="col-sm-offset-2 col-sm-10">
